--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img class="md-pt-44 cursor" src="./assets/images/png/shopify.png" alt="shopify">
                     </div>
                      <div class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center">
-                        <img class="md-pt-44 cursor" src="./assets/images/png/ebay.png" alt="ebay">
+                        <img class="md-pt-44 cursor" src="./assets/images/svg/Ebay.svg" alt="ebay">
                     </div>
                      <div class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center">
                         <img class="md-pt-44 cursor" src="./assets/images/png/big.png" alt="big">
