add tagret black

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                     <img class="lg-pb-14" src="./assets/images/svg/icon-svg.svg" alt="icon-logo">
                    <div class="col-6 col-lg-2 lg-dis-block dis-none">
                     <div class="d-flex gap-36 sm-gap-20">
-                        <a href="#" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/facebook.svg" alt="facebook"></a>
-                        <a href="#" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/insta.svg" alt="insta"></a>
-                        <a href="#" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/linkdin.svg" alt="linkdin"></a>
-                        <a href="#" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/twiter.svg" alt="twitter"></a>
+                        <a href="https://facebook.com" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/facebook.svg" alt="facebook"></a>
+                        <a href="https://instagram.com" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/insta.svg" alt="insta"></a>
+                        <a href="https://www.linkedin.com/login" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/linkdin.svg" alt="linkdin"></a>
+                        <a href="https://www.linkedin.com/login" target="_blank"><img class="cursor sm-scale" src="./assets/images/svg/twiter.svg" alt="twitter"></a>
                     </div>
                 </div>
                 </div>
@@ -253,10 +253,10 @@
                 </div>
                 <div class="col-6 col-lg-2 lg-d-none">
                     <div class="d-flex gap-36 xl-gap-30">
-                        <a href="#" target="_blank"><img class="cursor" src="./assets/images/svg/facebook.svg" alt="facebook"></a>
-                        <a href="#" target="_blank"><img class="cursor" src="./assets/images/svg/insta.svg" alt="insta"></a>
-                        <a href="#" target="_blank"><img class="cursor" src="./assets/images/svg/linkdin.svg" alt="linkdin"></a>
-                        <a href="#" target="_blank"><img class="cursor" src="./assets/images/svg/twiter.svg" alt="twitter"></a>
+                        <a href="https://facebook.com" target="_blank"><img class="cursor" src="./assets/images/svg/facebook.svg" alt="facebook"></a>
+                        <a href="https://instagram.com" target="_blank"><img class="cursor" src="./assets/images/svg/insta.svg" alt="insta"></a>
+                        <a href="https://www.linkedin.com/login" target="_blank"><img class="cursor" src="./assets/images/svg/linkdin.svg" alt="linkdin"></a>
+                        <a href="https://www.linkedin.com/login" target="_blank"><img class="cursor" src="./assets/images/svg/twiter.svg" alt="twitter"></a>
                     </div>
                 </div>
              </div>
