--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </div>
     </section>
-    <section class="bg-black mt-10">
+    <section class="bg-dark-blue mt-10">
       <div class="container max-w-739 pt-46 pb-54">
         <div class="row">
           <div class="col-12 col-lg-5">
@@ -413,9 +413,6 @@
         </div>
       </div>
     </section>
-    <div id="preloader">
-      <div class="loader"></div>
-    </div>
   </body>
   <script src="./assets/js/app.js"></script>
   <!-- bootstrap link  -->
