--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <div
                 class="box-2 blur radius-20 max-w-218 max-w-175 py-3 px-2 position-absolute top-left-2"
               >
-                <h5 class="heading-2 max-w-173">REVENUE FORECASTING</h5>
+                <h5 class="heading-2 max-w-173 pb-6">REVENUE FORECASTING</h5>
                 <img
                   class="w-100"
                   src="./assets/images/svg/revenue-line.svg"
@@ -177,7 +177,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
-                class="w-83 mx-auto position-relative cursor"
+                class=" mx-auto position-relative cursor"
                 src="./assets/images/png/section-4-logo-1.png"
                 alt="logo"
               />
@@ -195,7 +195,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-lg-52">
               <img
-                class="w-83 mx-auto position-relative cursor"
+                class=" mx-auto position-relative cursor"
                 src="./assets/images/png/section-4-logo-3.png"
                 alt="logo"
               />
