--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
-                class=" mx-auto position-relative cursor"
+                class=" mx-auto position-relative cursor pb-10"
                 src="./assets/images/png/section-4-logo-1.png"
                 alt="logo"
               />
@@ -186,7 +186,7 @@
           </div>
           <div class="col-12 col-lg-6 col-xl-3 pt-lg-52">
             <div class="mx-auto d-flex flex-column">
-              <p class="description color-white mx-auto p-0 cursor">
+              <p class="description color-white mx-auto p-0 cursor pb-10">
                 Average store growth
               </p>
               <h2 class="section-4-heading color-white cursor">400%</h2>
@@ -195,7 +195,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-lg-52">
               <img
-                class=" mx-auto position-relative cursor"
+                class=" mx-auto position-relative cursor pb-10"
                 src="./assets/images/png/section-4-logo-3.png"
                 alt="logo"
               />
@@ -204,7 +204,7 @@
           </div>
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-lg-52">
-              <p class="description color-white mx-auto p-0 cursor">
+              <p class="description color-white mx-auto p-0 cursor pb-10">
                 Funding given
               </p>
               <h2 class="section-4-heading color-white cursor">$450M+</h2>
