--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
     </section>
     <section class="bg-dark-blue mt-10">
       <div class="container max-w-739 pt-46 pb-54">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-12 col-lg-5">
             <h5 class="heading-svg color-white">MAIN SUPPORTED PLATFORMS</h5>
           </div>
           <div class="col-12 col-lg-7">
-            <div class="row">
+            <div class="row ">
               <div
                 class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center"
               >
