--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     </section>
     <section class="bg-dark-blue mt-10">
       <div class="container max-w-739 pt-46 pb-54">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center">
           <div class="col-12 col-lg-5">
-            <h5 class="heading-svg color-white">MAIN SUPPORTED PLATFORMS</h5>
+            <h5 class="heading-svg color-white pb-0 mb-0">MAIN SUPPORTED PLATFORMS</h5>
           </div>
           <div class="col-12 col-lg-7">
-            <div class="row ">
+            <div class="row  align-items-center justify-content-center">
               <div
-                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center"
+                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
                 <img
                   class="md-pt-44 cursor"
@@ -105,7 +105,7 @@
                 />
               </div>
               <div
-                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center"
+                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
                 <img
                   class="md-pt-44 cursor"
@@ -114,7 +114,7 @@
                 />
               </div>
               <div
-                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center"
+                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
                 <img
                   class="md-pt-44 cursor"
@@ -123,7 +123,7 @@
                 />
               </div>
               <div
-                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center"
+                class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
                 <img
                   class="md-pt-44 cursor"
@@ -173,7 +173,7 @@
     </section>
     <section class="py-87 bg-black">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center">
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
