add btn padding

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h5 class="heading-svg color-white pb-0 mb-0">MAIN SUPPORTED PLATFORMS</h5>
           </div>
           <div class="col-12 col-lg-7">
-            <div class="row  align-items-center justify-content-center">
+            <div class="row  align-items-center justify-content-center mx-26">
               <div
                 class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
@@ -166,7 +166,7 @@
             <p class="description pb-1 max-w-333 lg-center lg-text-center">
               By analyzing your sales velocity and growth potential.
             </p>
-            <button class="btn-1 lg-center">Apply now</button>
+            <button class="btn-1 lg-center p-x-y">Apply now</button>
           </div>
         </div>
       </div>
