--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6 col-xl-3">
-            <div class="mx-auto d-flex flex-column pt-lg-52">
+            <div class="mx-auto d-flex flex-column pt-xl-52">
               <img
                 class=" mx-auto position-relative cursor pb-10"
                 src="./assets/images/png/section-4-logo-3.png"
@@ -203,7 +203,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6 col-xl-3">
-            <div class="mx-auto d-flex flex-column pt-lg-52">
+            <div class="mx-auto d-flex flex-column pt-xl-52">
               <p class="description color-white mx-auto p-0 cursor pb-10">
                 Funding given
               </p>
