--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="container">
         <div class="row row-reverse justify-content-between">
           <div class="col-12 col-xl-6">
-            <div class="position-relative lg-mt-84 sm-set-position">
+            <div class="position-relative lg-mt-84 sm-set-position max-w-480 mx-auto">
               <img
                 class="w-100"
                 src="./assets/images/png/section-2-girl-img.png"
