add py in section-5

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
     </section>
-    <section class="py-87 bg-black">
+    <section class="py-87 md-py-60 bg-black">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-12 col-lg-6 col-xl-3">
