--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
       <div class="container max-w-739 pt-46 pb-54">
         <div class="row align-items-center justify-content-center">
           <div class="col-12 col-lg-5">
-            <h5 class="heading-svg color-white pb-0 mb-0">MAIN SUPPORTED PLATFORMS</h5>
+            <h5 class="heading-svg color-white pb-0 mb-0">
+              MAIN SUPPORTED PLATFORMS
+            </h5>
           </div>
           <div class="col-12 col-lg-7">
-            <div class="row  align-items-center justify-content-center mx-26">
+            <div class="row align-items-center justify-content-center mx-26">
               <div
                 class="col-6 col-sm-6 col-md-3 mx-auto d-flex justify-content-center align-items-center"
               >
@@ -140,7 +142,9 @@
       <div class="container">
         <div class="row row-reverse justify-content-between">
           <div class="col-12 col-xl-6">
-            <div class="position-relative lg-mt-84 sm-set-position max-w-480 mx-auto">
+            <div
+              class="position-relative lg-mt-84 sm-set-position max-w-480 mx-auto"
+            >
               <img
                 class="w-100"
                 src="./assets/images/png/section-2-girl-img.png"
@@ -177,7 +181,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
-                class=" mx-auto position-relative cursor pb-10"
+                class="mx-auto position-relative cursor pb-10"
                 src="./assets/images/png/section-4-logo-1.png"
                 alt="logo"
               />
@@ -195,7 +199,7 @@
           <div class="col-12 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-xl-52">
               <img
-                class=" mx-auto position-relative cursor pb-10"
+                class="mx-auto position-relative cursor pb-10"
                 src="./assets/images/png/section-4-logo-3.png"
                 alt="logo"
               />
