--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./assets/images/svg/dolor.svg"
+      href="./assets/images/png/fav-logo.png"
       type="image/x-icon"
     />
     <title>Fig</title>
@@ -28,7 +28,7 @@
         />
       </div>
       <div class="container">
-        <div class="row align-items-center row-reverse">
+        <div class="row align-items-center col-reverse">
           <div class="col-12 col-lg-6">
             <div class="max-w-475 pt-263">
               <h1 class="main-heading color-white pb-24">
@@ -140,7 +140,7 @@
     </section>
     <section class="bg-cream py-120 md-py-60 overflow-hidden">
       <div class="container">
-        <div class="row row-reverse justify-content-between">
+        <div class="row col-reverse justify-content-between">
           <div class="col-12 col-xl-6">
             <div
               class="position-relative lg-mt-84 sm-set-position max-w-480 mx-auto"
@@ -418,7 +418,6 @@
       </div>
     </section>
   </body>
-  <script src="./assets/js/app.js"></script>
   <!-- bootstrap link  -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
