--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="bg-img-1 pb-100 overflow-hidden">
       <div class="container max-w-1432">
         <img
-          class="logo cursor"
+          class="logo cursor lg-pl-12"
           src="./assets/images/svg/icon-svg.svg"
           alt="logo"
         />
@@ -175,43 +175,43 @@
         </div>
       </div>
     </section>
-    <section class="py-87 md-py-60 bg-black">
+    <section class="py-87 md-py-60 bg-dark-blue">
       <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-12 col-lg-6 col-xl-3">
+        <div class="row align-items-center">
+          <div class="col-6 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
-                class="mx-auto position-relative cursor pb-10"
+                class="mx-auto position-relative cursor pb-10 size-change-logo pt-lg-52"
                 src="./assets/images/png/section-4-logo-1.png"
                 alt="logo"
               />
-              <h2 class="section-4-heading color-white cursor">‘A’ Rating</h2>
+              <h2 class="section-4-heading color-white cursor p-0 m-0">‘A’ Rating</h2>
             </div>
           </div>
-          <div class="col-12 col-lg-6 col-xl-3 pt-lg-52">
+          <div class="col-6 col-lg-6 col-xl-3 pt-lg-52">
             <div class="mx-auto d-flex flex-column">
-              <p class="description color-white mx-auto p-0 cursor pb-10">
+              <p class="description color-white mx-auto p-0 cursor pb-10 size-change-md">
                 Average store growth
               </p>
-              <h2 class="section-4-heading color-white cursor">400%</h2>
+              <h2 class="section-4-heading color-white cursor p-0 m-0">400%</h2>
             </div>
           </div>
-          <div class="col-12 col-lg-6 col-xl-3">
+          <div class="col-6 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-xl-52">
               <img
-                class="mx-auto position-relative cursor pb-10"
+                class="mx-auto position-relative cursor pb-10 size-change-logo"
                 src="./assets/images/png/section-4-logo-3.png"
                 alt="logo"
               />
-              <h2 class="section-4-heading color-white cursor">Excellent</h2>
+              <h2 class="section-4-heading color-white cursor p-0 m-0">Excellent</h2>
             </div>
           </div>
-          <div class="col-12 col-lg-6 col-xl-3">
+          <div class="col-6 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column pt-xl-52">
-              <p class="description color-white mx-auto p-0 cursor pb-10">
+              <p class="description color-white mx-auto p-0 cursor pb-10 size-change-md">
                 Funding given
               </p>
-              <h2 class="section-4-heading color-white cursor">$450M+</h2>
+              <h2 class="section-4-heading color-white cursor p-0 m-0">$450M+</h2>
             </div>
           </div>
         </div>
@@ -335,7 +335,7 @@
         </div>
       </div>
     </section>
-    <section class="bg-black pt-54-pb-63 lg-pb-28 px-3">
+    <section class="bg-dark-blue pt-54-pb-63 lg-pb-28 px-3">
       <div class="container max-w-1440">
         <div class="row align-items-center justify-content-between">
           <div class="col-12 col-lg-1 d-flex justify-content-between">
@@ -375,7 +375,7 @@
           </div>
           <div class="col-12 col-lg-2">
             <div class="footer-text max-w-163">
-              8fig, 1717 W 6th St, Austin, Texas
+              8FIG, 1717 W 6TH ST, AUSTIN, TEXAS
             </div>
           </div>
           <div
@@ -383,7 +383,7 @@
           >
             <div class="footer-text">
               <img src="./assets/images/png/©.png" alt="c" />
-              2024 8fig - All Rights Reserved
+              2024 8FIG - ALL RIGHTS RESERVED
             </div>
           </div>
           <div class="col-6 col-lg-2 lg-d-none">
