--- a/index.html
+++ b/index.html
@@ -175,20 +175,20 @@
         </div>
       </div>
     </section>
-    <section class="py-87 md-py-60 bg-dark-blue">
+    <section class="py-87 md-pt-60-pb-60 bg-dark-blue">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-6 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <img
-                class="mx-auto position-relative cursor pb-10 size-change-logo pt-lg-52"
+                class="mx-auto position-relative cursor pb-10 size-change-logo"
                 src="./assets/images/png/section-4-logo-1.png"
                 alt="logo"
               />
               <h2 class="section-4-heading color-white cursor p-0 m-0">‘A’ Rating</h2>
             </div>
           </div>
-          <div class="col-6 col-lg-6 col-xl-3 pt-lg-52">
+          <div class="col-6 col-lg-6 col-xl-3">
             <div class="mx-auto d-flex flex-column">
               <p class="description color-white mx-auto p-0 cursor pb-10 size-change-md">
                 Average store growth
@@ -383,7 +383,7 @@
           >
             <div class="footer-text">
               <img src="./assets/images/png/©.png" alt="c" />
-              2024 8FIG - ALL RIGHTS RESERVED
+              2024 8FIG - ALL RIGHTS RESE
             </div>
           </div>
           <div class="col-6 col-lg-2 lg-d-none">
