add br add and none

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-12 col-xl-6">
             <img class="lg-center" src="./assets/images/png/1.png" alt="1" />
             <h2 class="heading-section-3 max-w-364 pt-14">
-              Get an AI evaluation of your supply <br />chain needs
+              Get an AI evaluation of your supply <br class="md-d-none">chain needs
             </h2>
             <p class="description pb-1 max-w-333 lg-center lg-text-center">
               By analyzing your sales velocity and growth potential.
