add recover spacing

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         <span class="short-heading d-flex justify-content-center"
           >STILL HAVE QUESTION?</span
         >
-        <h2 class="accodian-heading pb-24">Learn more with FAQ</h2>
-        <div class="accordion" id="accordionExample">
+        <h2 class="accodian-heading pb-24 md-pb-0 p-0 m-0">Learn more with FAQ</h2>
+        <div class="accordion pt-60 md-pt-40" id="accordionExample">
           <div class="accordion-item border-top-0 border-end-0 border-start-0">
             <h2 class="accordion-header">
               <button
