--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <div
                 class="box-2 blur radius-20 max-w-218 max-w-175 py-3 px-2 position-absolute top-left-2"
               >
-                <h5 class="heading-2 max-w-173 pb-6">REVENUE FORECASTING</h5>
+                <h5 class="heading-2 max-w-173 pb-6 color-grey">REVENUE FORECASTING</h5>
                 <img
                   class="w-100"
                   src="./assets/images/svg/revenue-line.svg"
