add link in footer

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-12 col-lg-1 d-flex justify-content-between">
             <img
-              class="lg-pb-14"
+              class="lg-pb-14 cursor"
               src="./assets/images/svg/icon-svg.svg"
               alt="icon-logo"
             />
